[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bountyhunt"
version = "0.1.0"
description = "Automated recon and monitoring CLI for bug bounty programs"
authors = [{name = "bess1lie"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3.0",
]

[project.scripts]
bountyhunt = "bountyhunt.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
